<resources>
    <string name="app_name">Kitsu</string>

    <string name="command_error">Error</string>
    <string name="command_profile_no_name">No name</string>
    <string name="min_template">%s min</string>
    <string name="episode_template">%s Episode</string>

    <!--Bottom nav title-->
    <string name="bottom_nav_title_feed">feed</string>
    <string name="bottom_nav_title_movie">anime</string>
    <string name="bottom_nav_title_group">group</string>
    <string name="bottom_nav_title_profile">profile</string>

    <!--Post-->
    <string name="comment_hint">Enter text</string>
    <string name="comment_no_data_title">No comment</string>

    <!--Movie-->
    <string name="movie_anime_title">Anime</string>
    <string name="movie_manga_title">Manga</string>
    <string name="movie_novelties_title">Novelties</string>
    <string name="movie_all_movie_title">View All</string>
    <string name="movie_anime_popular">High rating</string>
    <string name="movie_anime_actual">this year</string>
    <string name="movie_anime_by_amazon">bu Amazon</string>

    <!--AnimeDetails-->
    <string name="anime_details_trailer">watch trailer</string>
    <string name="anime_desc_title">Description</string>
    <string name="anime_episode_title">Episode</string>
    <string name="anime_episode_category">Category</string>
    <string name="anime_episode_reaction">Reaction</string>
    <string name="anime_episode_total_template">total %d</string>

    <!--PostCreate-->
    <string name="post_create_title">Create post</string>
    <string name="post_create_text_hilt">Enter post text</string>

    <!--ProfileDetails-->
    <string name="profile_details_like_title">like</string>
    <string name="profile_details_followers_title">followers</string>
    <string name="profile_details_following_title">following</string>

    <string name="profile_info_title">User information</string>
    <string name="profile_details_no_name_stub">No Name</string>
    <string name="profile_details_location_stub">No location</string>
    <string name="profile_details_birth_date_stub">No birth date</string>
    <string name="profile_details_gender_stub">No gender</string>
    <string name="profile_details_about_stub">No about me</string>




</resources>