<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <lsvapp.kitsu.presentation.utils.widget.CenterToolbarView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:view_toolbar_title="@string/bottom_nav_title_movie" />

    <lsvapp.kitsu.presentation.utils.widget.StubView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/command_error" />

    <ProgressBar
        android:id="@+id/anime_progress"
        style="@style/Widget.Kitsu.Progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nestedScrollView"
        tools:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:padding="@dimen/spacing_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <lsvapp.kitsu.presentation.utils.widget.ContentViewer
                android:id="@+id/popular_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:content_view_title="@string/movie_anime_popular"></lsvapp.kitsu.presentation.utils.widget.ContentViewer>

            <lsvapp.kitsu.presentation.utils.widget.ContentViewer
                android:id="@+id/actual_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:content_view_title="@string/movie_anime_actual"></lsvapp.kitsu.presentation.utils.widget.ContentViewer>

            <lsvapp.kitsu.presentation.utils.widget.ContentViewer
                android:id="@+id/amazon_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:content_view_title="@string/movie_anime_by_amazon"></lsvapp.kitsu.presentation.utils.widget.ContentViewer>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>