<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/spacing_xxlarge"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/image_cover"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:foreground="@drawable/image_border"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent="0.5"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small"
                    android:background="@drawable/rating_background"
                    android:backgroundTint="?colorPrimary"
                    android:padding="@dimen/spacing_small"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/image"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="8.1">
                </TextView>

                <TextView
                    android:id="@+id/age_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small"
                    android:alpha="0.6"
                    android:background="@drawable/rating_background"
                    android:backgroundTint="@color/black"
                    android:padding="@dimen/spacing_small"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/image"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="8.1"></TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_xlarge">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:textColor="@color/white"
                android:textSize="@dimen/text_headline4"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/lorem" />

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_normal"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <TextView
                    android:id="@+id/user_viewing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_eye"
                    android:drawablePadding="@dimen/spacing_small"
                    android:textColor="@color/white"
                    tools:text="1" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:drawableStart="@drawable/ic_time"
                    android:drawablePadding="@dimen/spacing_small"
                    android:textColor="@color/white"
                    tools:text="1" />
            </LinearLayout>

            <Button
                android:id="@+id/button_trailer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_normal"
                android:backgroundTint="@color/btn_primary_background"
                android:padding="@dimen/spacing_normal"
                android:text="@string/anime_details_trailer"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info" />

            <TextView
                android:id="@+id/desc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/anime_desc_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_headline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_trailer" />

            <TextView
                android:id="@+id/desc_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:textAlignment="viewStart"
                android:textColor="@color/gray200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/desc_title"
                app:layout_constraintTop_toBottomOf="@+id/desc_title"
                tools:text="@tools:sample/lorem" />

            <LinearLayout
                android:id="@+id/details_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_content"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/categories_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/anime_episode_category"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_headline5" />

                <lsvapp.kitsu.presentation.utils.widget.category.AnimeCategoryView
                    android:id="@+id/categories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/spacing_normal"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_category" />

                <TextView
                    android:id="@+id/episode_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/anime_episode_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_headline5" />

                <lsvapp.kitsu.presentation.utils.widget.ContentViewer
                    android:id="@+id/contentViewer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </lsvapp.kitsu.presentation.utils.widget.ContentViewer>

                <TextView
                    android:id="@+id/reaction_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anime_episode_reaction"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_headline5" />

                <lsvapp.kitsu.presentation.utils.widget.reaction.ReactionView
                    android:id="@+id/reaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_reaction">
                </lsvapp.kitsu.presentation.utils.widget.reaction.ReactionView>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/episode_loading"
                style="@style/Widget.Kitsu.Progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_content"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
